fix(docker): use direct node command in Dockerfile.dev to avoid .env dependency

--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -10,4 +10,5 @@ COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+# Use direct node command - env vars are passed via docker-compose
+CMD ["node", "--experimental-transform-types", "--watch", "src/index.ts"]
