feat: Add React frontend with Sentry and OpenTelemetry observability
- Add React + Vite frontend dashboard with Tailwind CSS styling
- Integrate Sentry error tracking with feedback dialog and replay
- Integrate OpenTelemetry for distributed tracing (W3C Trace Context)
- Add dashboard components: HealthStatus, DownloadJobs, ErrorLog, TraceViewer, PerformanceMetrics
- Add API client with automatic tracing and error capture
- Add Docker support (Dockerfile.dev, Dockerfile.prod, nginx.conf)
- Update Docker Compose to include frontend service
- Add frontend environment configuration and documentation
- Update INFRASTRUCTURE.md with frontend architecture

Challenge 4 (Observability Bonus - 10 points):
- End-to-end trace correlation between frontend and backend
- Real-time health monitoring with auto-refresh
- Error tracking with trace ID linking to Jaeger
- Performance metrics dashboard

--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -160,6 +160,33 @@ services:
     networks:
       - delineate-network
 
+  # ===========================================
+  # Frontend - React Dashboard with Observability
+  # ===========================================
+  delineate-frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile.dev
+    container_name: delineate-frontend
+    ports:
+      - "5173:5173" # Vite dev server
+    volumes:
+      - ../frontend/src:/app/src
+      - ../frontend/index.html:/app/index.html
+    environment:
+      - VITE_API_URL=http://localhost:3000
+      - VITE_JAEGER_URL=http://localhost:16686
+      - VITE_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+      # Add your Sentry DSN here:
+      # - VITE_SENTRY_DSN=https://your-key@sentry.io/project-id
+    depends_on:
+      delineate-app:
+        condition: service_healthy
+      delineate-jaeger:
+        condition: service_started
+    networks:
+      - delineate-network
+
 # ===========================================
 # Volumes - Persistent Data Storage
 # ===========================================
