--- a/docker/compose.prod.yml
+++ b/docker/compose.prod.yml
@@ -12,13 +12,13 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - ../.env.docker
+      - ../.env.prod
     environment:
       - NODE_ENV=production
       - S3_ENDPOINT=http://minio:9000
-      - S3_ACCESS_KEY_ID=minioadmin
-      - S3_SECRET_ACCESS_KEY=minioadmin
-      - S3_BUCKET_NAME=downloads
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY:-minioadmin}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME:-downloads}
       - S3_FORCE_PATH_STYLE=true
       - S3_REGION=us-east-1
       - REDIS_HOST=redis
@@ -61,13 +61,13 @@ services:
     container_name: delineate-worker-prod
     command: ["node", "--experimental-transform-types", "src/worker.ts"]
     env_file:
-      - ../.env.docker
+      - ../.env.prod
     environment:
       - NODE_ENV=production
       - S3_ENDPOINT=http://minio:9000
-      - S3_ACCESS_KEY_ID=minioadmin
-      - S3_SECRET_ACCESS_KEY=minioadmin
-      - S3_BUCKET_NAME=downloads
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY:-minioadmin}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME:-downloads}
       - S3_FORCE_PATH_STYLE=true
       - S3_REGION=us-east-1
       - REDIS_HOST=redis
@@ -118,8 +118,8 @@ services:
     volumes:
       - minio-data:/data
     environment:
-      - MINIO_ROOT_USER=minioadmin
-      - MINIO_ROOT_PASSWORD=minioadmin
+      - MINIO_ROOT_USER=${S3_ACCESS_KEY_ID:-minioadmin}
+      - MINIO_ROOT_PASSWORD=${S3_SECRET_ACCESS_KEY:-minioadmin}
     command: server /data --console-address ":9001"
     healthcheck:
       test: ["CMD", "mc", "ready", "local"]
@@ -139,14 +139,13 @@ services:
     depends_on:
       minio:
         condition: service_healthy
-    entrypoint: >
-      /bin/sh -c "
-      mc alias set myminio http://minio:9000 minioadmin minioadmin;
-      mc mb myminio/downloads --ignore-existing;
-      mc anonymous set download myminio/downloads;
-      echo 'Bucket downloads created successfully';
-      exit 0;
-      "
+    environment:
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY:-minioadmin}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME:-downloads}
+    volumes:
+      - ./minio-init.sh:/minio-init.sh:ro
+    entrypoint: ["/bin/sh", "/minio-init.sh"]
     networks:
       - delineate-network
 
